--- a/templates/template.html
+++ b/templates/template.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React pizza-menu</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,400;0,500;0,600;1,100&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="template.css" />
   </head>
   <body>
@@ -25,28 +32,32 @@
             <p>Tomato, mozarella, and pepperoni</p>
             <span>sold out</span>
           </div>
-        </li><li class="pizza">
+        </li>
+        <li class="pizza">
           <img src="../public/pizzas/salamino.jpg" alt="pizza salamino image" />
           <div>
             <h3>Pizza Salamino</h3>
             <p>Tomato, mozarella, and pepperoni</p>
             <span>sold out</span>
           </div>
-        </li><li class="pizza">
+        </li>
+        <li class="pizza">
           <img src="../public/pizzas/salamino.jpg" alt="pizza salamino image" />
           <div>
             <h3>Pizza Salamino</h3>
             <p>Tomato, mozarella, and pepperoni</p>
             <span>sold out</span>
           </div>
-        </li><li class="pizza">
+        </li>
+        <li class="pizza">
           <img src="../public/pizzas/salamino.jpg" alt="pizza salamino image" />
           <div>
             <h3>Pizza Salamino</h3>
             <p>Tomato, mozarella, and pepperoni</p>
             <span>sold out</span>
           </div>
-        </li><li class="pizza">
+        </li>
+        <li class="pizza">
           <img src="../public/pizzas/salamino.jpg" alt="pizza salamino image" />
           <div>
             <h3>Pizza Salamino</h3>
@@ -64,8 +75,8 @@
         </li>
       </ul>
     </main>
-    <footer>
-      <p>footer</p>
+    <footer class="footer">
+      <p>We're happy to welcome you between {openHour}:00 and {closeHour}:00.</p>
     </footer>
   </body>
 </html>
